--- a/Proyecto/1_inicio_hotel/inx_servicios.html
+++ b/Proyecto/1_inicio_hotel/inx_servicios.html
@@ -16,5 +16,90 @@
             <button><a href="" style="text-decoration: none; color: blanchedalmond;">Lineas de Atencion</a></button>
         </nav>
     </div>
+
+    <div class="tema">
+        <nav id="menu">
+            <ul style="text-decoration: none;">
+                    <li selected="true">______HOTEL BRAUN256______
+                        <ul style="list-style-type: none; color: blanchedalmond; background-color: rgba(103, 93, 124, 0.788); font-size: 20px;">
+                            <li><br/></li>
+                            <li><a href="">HOTEL</a></li>
+                            <li><hr></li>
+                            <li><a href="">HABITACIONES</a></li>
+                            <li><hr></li>
+                            <li><a href="">SERVICIOS</a></li>
+                            <li><hr></li>
+                            <li><a href="#">EVENTOS ESPECIALES</a></li>
+                            <li><hr></li>
+                            <li><a href="#">OPINIONES Y FOTOS</a></li>
+                            <li><hr></li>
+                            <li>MAS BRAUN256</li>
+                            <li><br/></li>
+                            <li><a href="#">PROMOCIONES</a></li>
+                            <li><hr></li>
+                            <li><a href="">RESERVAS</a></li>
+                            <li><hr></li>
+                            <li><a href="">REGISTRARME</a></li>
+                        </ul>
+                    </li>
+            </ul>
+        </nav>
+
+    <h3 style="color: blanchedalmond; font-family: Arial, Helvetica, sans-serif;font-size: 22px;">BIENVENIDOS</h3>
+</div>
+
+<div class="semi">
+    <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif; color: rgb(87, 58, 94);">Viaje con la Aplicacion de World of Braun256</h1>
+    <p>Le brindamos mas flexibilidad durante su estadia, con servicios digitales que le permiten controlar la forma en que interactua
+      con nosotros. 
+      <br>Descubra las siguientes comodidades a traves de la Aplicacion World of Braun256, disponible en Braun256. 
+      <br>Ademas contamos con transporte Aeropuerto-Hotel-Aeropuerto.
+    </p>
+    <ul style="list-style-type: none; display:flex; justify-content: center;">
+        <li><a href="" style="font-family: Arial, Helvetica, sans-serif;color: darkgoldenrod;">Check-In en linea</a></li> |  
+        <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Servicio de Transporte</a></li> | <br/>
+        <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Acceso a la Cuenta</a></li> | <br>
+        <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Factura de Estadia</a></li>
+    </ul>
+    <br/> 
+      <button style="width: -20%; margin-left: 730px;"><a href="" style="color: cornsilk;">Consiguelo en AppStore</a></button>
+      <button style="width: -20%;"><a href="" style="color: cornsilk;">Disponible en Google Play</a></button>
+    
+</div>
+
+<div class="final">
+    <h4>RESERVAS</h4>
+    <ul style="list-style-type: none; display:flex; justify-content: center;">
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Modificar</a></li> |
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Recuperar Factura</a></li>
+    </ul>
+    <h4>SITIOS CORPORATIVOS</h4>
+    <ul style="list-style-type: none; display:flex; justify-content: center;">
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Empresa</a></li> |
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif;color: darkgoldenrod;">Posibilidades de Empleo</a></li> |
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Proyectos Braun256</a></li> |
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Sala de Prensa</a></li>
+    </ul>
+    <h4>SERVICIOS DE ATENCION</h4>
+    <ul style="list-style-type: none; display:flex; justify-content: center;">
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Chat en Linea</a></li> |
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Preguntas Frecuentes</a></li> |
+      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Contactenos</a></li>
+    </ul>
+    <hr style="border: 8px solid darkgrey;">
+    <h4>OBTENER LA APLICACION</h4>
+    <a href="" style="color: cornsilk;"><button style="width: -20%; margin-left: 850px; background-color:black;"> Consiguelo en AppStore</button></a>
+    <a href="" style="color: cornsilk;"><button style="width: -20%; background-color:black;"> Disponible en Google Play</button></a>
+    <h2 style="font-family: Arial, Helvetica, sans-serif; text-align: center; color: floralwhite;">CONECTESE CON BRAUN256</h2>
+    <img src="ASSETS/Imagenes_Hotel/imagenes_home_hotel/fb-twitter-instagram.jpg" alt="" style="width: 7%; margin-left: 46%;">
+</div>
+
+    <div class="fin">
+        <a href="" style="color: ghostwhite;">Politicas de Privacidad</a> |
+        <a href="" style="color: ghostwhite;">Terminos y condiciones</a> |
+        <a href="" style="color: ghostwhite;">Precaucion y Seguridad</a> |
+        <a href="" style="color: ghostwhite;">Esclavitud Moderna y Trafico de personas</a>
+        <p>© 2021 Braun256 Corporation</p>
+    </div>
 </body>
 </html>
