--- a/Proyecto/1_inicio_hotel/inx_servicios.html
+++ b/Proyecto/1_inicio_hotel/inx_servicios.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios Hotel</title>
+    <link rel="stylesheet" href="ASSETS/CSS/css_servicios/style_servicios.css">
 </head>
 <body>
     <div class="logy">
