--- a/Proyecto/1_inicio_hotel/inx_home_hotel.html
+++ b/Proyecto/1_inicio_hotel/inx_home_hotel.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
     <link rel="stylesheet" href="ASSETS/CSS/css_home/style_home_hotel.css">
 </head>
 <body>
     <div class="logy">
         <h4><a href="" style="color: ghostwhite; text-decoration: none;">reservations@hotelBraun256.com</a></h4>     
-        <h4><a href="" style="color: ghostwhite;"> Phone: +44(555)200-000</a>  | <a href="" style="color: ghostwhite;">Email: info@BrHotel.com.us</a>  |  <a href="" style="color: ghostwhite;">Adress: 450, New York, NY, 10070</a></h4>
+        <h4><a href="" style="color: ghostwhite; text-decoration: none;"> Phone: +44(555)200-000</a>  | <a href="" style="color: ghostwhite; text-decoration: none;">Email: info@BrHotel.com.us</a>  |  <a href="" style="color: ghostwhite; text-decoration: none;">Adress: 450, New York, NY, 10070</a></h4>
         <nav>
             <button><a href="" style="text-decoration: none; color: blanchedalmond;">Asesor Comercial</a></button>
             <button><a href="" style="text-decoration: none; color: blanchedalmond;">Puntos de Venta</a></button>
@@ -125,8 +124,7 @@
         <div class="inicial">
             <img src="ASSETS/Imagenes_Hotel/br22x.png" alt="" style="width: 13%; height: 250%; border: 8px groove rgb(143, 104, 160);">
             <h2 style="font-family: cursive;">______HOTEL BRAUN256______</h2>
-                <h4>Check In: 3:00 pm | Check Out: 12 m.d</h4>
-                <h4>Phone:+44(555)200-000    Email: info@BrHotel.com.us</h4>
+                <h4>Check In: 3:00 pm | Check Out: 12 m.d | Phone:+44(555)200-000 | Email: info@BrHotel.com.us</h4>
         </div>
         <br/><br/><br/><br/>
         <h4 style="color: black; text-align: left;">DESCRIPCION</h4><p>Un destino perfecto para unas vacaciones relajantes y de pleno descanso en donde podrás deleitarte con hermosos amaneceres y atardeceres desde su emblemático y romántico muelle en la orilla del Mar.
