--- a/Proyecto/1_inicio_hotel/inx_servicios.html
+++ b/Proyecto/1_inicio_hotel/inx_servicios.html
@@ -221,7 +221,7 @@
 
 <div class="semi">
     <br/><br/>
-    <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif; color: rgb(87, 58, 94);">Viaje con la Aplicacion de World of Braun256</h1>
+    <h3>Viaje con la Aplicacion de World of Braun256</h3>
     <p>Le brindamos mas flexibilidad durante su estadia, con servicios digitales que le permiten controlar la forma en que interactua
       con nosotros. 
       <br>Descubra las siguientes comodidades a traves de la Aplicacion World of Braun256, disponible en Braun256. 
@@ -241,19 +241,19 @@
 
 <div class="final">
     <br/><br/>
-    <h4>RESERVAS</h4>
+    <h5>RESERVAS</h5>
     <ul style="list-style-type: none; display:flex; justify-content: center;">
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Modificar</a></li> |
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Recuperar Factura</a></li>
     </ul>
-    <h4>SITIOS CORPORATIVOS</h4>
+    <h5>SITIOS CORPORATIVOS</h5>
     <ul style="list-style-type: none; display:flex; justify-content: center;">
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Empresa</a></li> |
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif;color: darkgoldenrod;">Posibilidades de Empleo</a></li> |
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Proyectos Braun256</a></li> |
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Sala de Prensa</a></li>
     </ul>
-    <h4>SERVICIOS DE ATENCION</h4>
+    <h5>SERVICIOS DE ATENCION</h5>
     <ul style="list-style-type: none; display:flex; justify-content: center;">
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Chat en Linea</a></li> |
       <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Preguntas Frecuentes</a></li> |
@@ -261,11 +261,11 @@
     </ul>
     <hr style="border: 8px solid darkgrey;">
     
-    <h4>OBTENER LA APLICACION</h4>
+    <h5>OBTENER LA APLICACION</h5>
     <button style="width: -20%; margin-left: 860px; background-color: black;"><a href="" style="color: cornsilk;">Consiguelo en AppStore</a></button>
     <button style="width: -20%; background-color: black;"><a href="" style="color: cornsilk;">Disponible en Google Play</a></button>
 
-    <h3 style="font-family: Arial, Helvetica, sans-serif; text-align: center; color: floralwhite;">CONECTESE CON BRAUN256</h3>
+    <h5>CONECTESE CON BRAUN256</h5>
     <a href="#" style="margin-left: 920px; color: black;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
       </svg></a>
