--- a/Proyecto/1_inicio_hotel/inx_servicios.html
+++ b/Proyecto/1_inicio_hotel/inx_servicios.html
@@ -32,14 +32,14 @@
               </svg></a>
 
         <nav>
-            <button><a href="" style="text-decoration: none; color: blanchedalmond;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+            <button><a href="#" style="text-decoration: none; color: blanchedalmond;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                 <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
               </svg>Asesor Comercial</a></button>
-            <button><a href="" style="text-decoration: none; color: blanchedalmond;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+            <button><a href="#" style="text-decoration: none; color: blanchedalmond;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
                 <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z"/>
                 <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
               </svg>Puntos de Venta</a></button>
-            <button><a href="" style="text-decoration: none; color: blanchedalmond;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-headset" viewBox="0 0 16 16">
+            <button><a href="#" style="text-decoration: none; color: blanchedalmond;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-headset" viewBox="0 0 16 16">
                 <path d="M8 1a5 5 0 0 0-5 5v1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6a6 6 0 1 1 12 0v6a2.5 2.5 0 0 1-2.5 2.5H9.366a1 1 0 0 1-.866.5h-1a1 1 0 1 1 0-2h1a1 1 0 0 1 .866.5H11.5A1.5 1.5 0 0 0 13 12h-1a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h1V6a5 5 0 0 0-5-5z"/>
               </svg>Lineas de Atencion</a></button>
         </nav>
@@ -51,13 +51,13 @@
     <div class="tema">
         <nav id="menu">
             <ul style="text-decoration: none;">
-                    <li selected="true">HOTEL BRAUN256
+                    <li selected="true" >HOTEL BRAUN256
                         <ul style="list-style-type: none; color: blanchedalmond; background-color: rgba(103, 93, 124, 0.788); font-size: 20px;">
-                            <li><a href="">HOTEL</a></li>
+                            <li><a href="inx_home_hotel.html">HOTEL</a></li>
                             <li><hr></li>
                             <li><a href="">HABITACIONES</a></li>
                             <li><hr></li>
-                            <li><a href="">SERVICIOS</a></li>
+                            <li><a href="inx_servicios.html">SERVICIOS</a></li>
                             <li><hr></li>
                             <li><a href="#">EVENTOS ESPECIALES</a></li>
                             <li><hr></li>
@@ -67,7 +67,7 @@
                             <li><br/></li>
                             <li><a href="#">PROMOCIONES</a></li>
                             <li><hr></li>
-                            <li><a href="">RESERVAS</a></li>
+                            <li><a href="inx_reservas.html">RESERVAS</a></li>
                             <li><hr></li>
                             <li><a href="">REGISTRARME</a></li>
                         </ul>
@@ -75,18 +75,18 @@
             </ul>
         </nav>
 
-        <a href="" style="color: burlywood; text-decoration: none; font-size: 10px; margin-left: 675px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wifi" viewBox="0 0 16 16">
+        <a href="#" style="color: burlywood; text-decoration: none; font-size: 10px; margin-left: 675px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-wifi" viewBox="0 0 16 16">
             <path d="M15.384 6.115a.485.485 0 0 0-.047-.736A12.444 12.444 0 0 0 8 3C5.259 3 2.723 3.882.663 5.379a.485.485 0 0 0-.048.736.518.518 0 0 0 .668.05A11.448 11.448 0 0 1 8 4c2.507 0 4.827.802 6.716 2.164.205.148.49.13.668-.049z"/>
             <path d="M13.229 8.271a.482.482 0 0 0-.063-.745A9.455 9.455 0 0 0 8 6c-1.905 0-3.68.56-5.166 1.526a.48.48 0 0 0-.063.745.525.525 0 0 0 .652.065A8.46 8.46 0 0 1 8 7a8.46 8.46 0 0 1 4.576 1.336c.206.132.48.108.653-.065zm-2.183 2.183c.226-.226.185-.605-.1-.75A6.473 6.473 0 0 0 8 9c-1.06 0-2.062.254-2.946.704-.285.145-.326.524-.1.75l.015.015c.16.16.407.19.611.09A5.478 5.478 0 0 1 8 10c.868 0 1.69.201 2.42.56.203.1.45.07.61-.091l.016-.015zM9.06 12.44c.196-.196.198-.52-.04-.66A1.99 1.99 0 0 0 8 11.5a1.99 1.99 0 0 0-1.02.28c-.238.14-.236.464-.04.66l.706.706a.5.5 0 0 0 .707 0l.707-.707z"/>
           </svg><br/>Wi-fi Gratis</a><a href="" style="color: burlywood; text-decoration: none; font-size: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cup-straw" viewBox="0 0 16 16">
             <path d="M13.902.334a.5.5 0 0 1-.28.65l-2.254.902-.4 1.927c.376.095.715.215.972.367.228.135.56.396.56.82 0 .046-.004.09-.011.132l-.962 9.068a1.28 1.28 0 0 1-.524.93c-.488.34-1.494.87-3.01.87-1.516 0-2.522-.53-3.01-.87a1.28 1.28 0 0 1-.524-.93L3.51 5.132A.78.78 0 0 1 3.5 5c0-.424.332-.685.56-.82.262-.154.607-.276.99-.372C5.824 3.614 6.867 3.5 8 3.5c.712 0 1.389.045 1.985.127l.464-2.215a.5.5 0 0 1 .303-.356l2.5-1a.5.5 0 0 1 .65.278zM9.768 4.607A13.991 13.991 0 0 0 8 4.5c-1.076 0-2.033.11-2.707.278A3.284 3.284 0 0 0 4.645 5c.146.073.362.15.648.222C5.967 5.39 6.924 5.5 8 5.5c.571 0 1.109-.03 1.588-.085l.18-.808zm.292 1.756C9.445 6.45 8.742 6.5 8 6.5c-1.133 0-2.176-.114-2.95-.308a5.514 5.514 0 0 1-.435-.127l.838 8.03c.013.121.06.186.102.215.357.249 1.168.69 2.438.69 1.27 0 2.081-.441 2.438-.69.042-.029.09-.094.102-.215l.852-8.03a5.517 5.517 0 0 1-.435.127 8.88 8.88 0 0 1-.89.17zM4.467 4.884s.003.002.005.006l-.005-.006zm7.066 0-.005.006c.002-.004.005-.006.005-.006zM11.354 5a3.174 3.174 0 0 0-.604-.21l-.099.445.055-.013c.286-.072.502-.149.648-.222z"/>
           </svg><br/>Servicio de Habitaciones</a>
-          <a href="" style="color: burlywood; text-decoration: none; font-size: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-spade-fill" viewBox="0 0 16 16">
+          <a href="#" style="color: burlywood; text-decoration: none; font-size: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-spade-fill" viewBox="0 0 16 16">
             <path d="M7.184 11.246A3.5 3.5 0 0 1 1 9c0-1.602 1.14-2.633 2.66-4.008C4.986 3.792 6.602 2.33 8 0c1.398 2.33 3.014 3.792 4.34 4.992C13.86 6.367 15 7.398 15 9a3.5 3.5 0 0 1-6.184 2.246 19.92 19.92 0 0 0 1.582 2.907c.231.35-.02.847-.438.847H6.04c-.419 0-.67-.497-.438-.847a19.919 19.919 0 0 0 1.582-2.907z"/></svg><br/>Casino Bar</a>
-          <a href="" style="color: burlywood;text-decoration: none; font-size: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-water" viewBox="0 0 16 16">
+          <a href="#" style="color: burlywood;text-decoration: none; font-size: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-water" viewBox="0 0 16 16">
             <path d="M.036 3.314a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0L.314 3.964a.5.5 0 0 1-.278-.65zm0 3a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0L.314 6.964a.5.5 0 0 1-.278-.65zm0 3a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0L.314 9.964a.5.5 0 0 1-.278-.65zm0 3a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.757-.703a.5.5 0 0 1-.278-.65z"/>
           </svg><br/>Piscina Climatizada</a>
-          <a href="" style="color: burlywood; text-decoration: none; font-size: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-alarm" viewBox="0 0 16 16">
+          <a href="#" style="color: burlywood; text-decoration: none; font-size: 10px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-alarm" viewBox="0 0 16 16">
             <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5z"/>
             <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1h-3zm1.038 3.018a6.093 6.093 0 0 1 .924 0 6 6 0 1 1-.924 0zM0 3.5c0 .753.333 1.429.86 1.887A8.035 8.035 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5zM13.5 1c-.753 0-1.429.333-1.887.86a8.035 8.035 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1z"/>
           </svg><br/>Check-In en Linea</a> 
@@ -228,14 +228,14 @@
       <br>Ademas contamos con transporte Aeropuerto-Hotel-Aeropuerto.
     </p>
     <ul style="list-style-type: none; display:flex; justify-content: center;">
-        <li><a href="" style="font-family: Arial, Helvetica, sans-serif;color: darkgoldenrod;">Check-In en linea</a></li> |  
-        <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Servicio de Transporte</a></li> | <br/>
-        <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Acceso a la Cuenta</a></li> | <br>
-        <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Factura de Estadia</a></li>
+        <li><a href="#" style="font-family: Arial, Helvetica, sans-serif;color: darkgoldenrod;">Check-In en linea</a></li> |  
+        <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Servicio de Transporte</a></li> | <br/>
+        <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Acceso a la Cuenta</a></li> | <br>
+        <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Factura de Estadia</a></li>
     </ul>
     <br/> 
-      <button style="width: -20%; margin-left: 860px; background-color: black;"><a href="" style="color: cornsilk;">Consiguelo en AppStore</a></button>
-      <button style="width: -20%; background-color: black;"><a href="" style="color: cornsilk;">Disponible en Google Play</a></button>
+      <button style="width: -20%; margin-left: 860px; background-color: black;"><a href="#" style="color: cornsilk;">Consiguelo en AppStore</a></button>
+      <button style="width: -20%; background-color: black;"><a href="#" style="color: cornsilk;">Disponible en Google Play</a></button>
     
 </div>
 
@@ -243,27 +243,27 @@
     <br/><br/>
     <h5>RESERVAS</h5>
     <ul style="list-style-type: none; display:flex; justify-content: center;">
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Modificar</a></li> |
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Recuperar Factura</a></li>
+      <li><a href="inx_reservas.html" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Modificar</a></li> |
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Recuperar Factura</a></li>
     </ul>
     <h5>SITIOS CORPORATIVOS</h5>
     <ul style="list-style-type: none; display:flex; justify-content: center;">
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Empresa</a></li> |
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif;color: darkgoldenrod;">Posibilidades de Empleo</a></li> |
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Proyectos Braun256</a></li> |
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Sala de Prensa</a></li>
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Empresa</a></li> |
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif;color: darkgoldenrod;">Posibilidades de Empleo</a></li> |
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Proyectos Braun256</a></li> |
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Sala de Prensa</a></li>
     </ul>
     <h5>SERVICIOS DE ATENCION</h5>
     <ul style="list-style-type: none; display:flex; justify-content: center;">
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Chat en Linea</a></li> |
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Preguntas Frecuentes</a></li> |
-      <li><a href="" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Contactenos</a></li>
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Chat en Linea</a></li> |
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Preguntas Frecuentes</a></li> |
+      <li><a href="#" style="font-family: Arial, Helvetica, sans-serif; color: darkgoldenrod;">Contactenos</a></li>
     </ul>
     <hr style="border: 8px solid darkgrey;">
     
     <h5>OBTENER LA APLICACION</h5>
-    <button style="width: -20%; margin-left: 860px; background-color: black;"><a href="" style="color: cornsilk;">Consiguelo en AppStore</a></button>
-    <button style="width: -20%; background-color: black;"><a href="" style="color: cornsilk;">Disponible en Google Play</a></button>
+    <button style="width: -20%; margin-left: 860px; background-color: black;"><a href="#" style="color: cornsilk;">Consiguelo en AppStore</a></button>
+    <button style="width: -20%; background-color: black;"><a href="#" style="color: cornsilk;">Disponible en Google Play</a></button>
 
     <h5>CONECTESE CON BRAUN256</h5>
     <a href="#" style="margin-left: 920px; color: black;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
@@ -279,10 +279,10 @@
 </div>
 
     <div class="fin">
-        <a href="" style="color: ghostwhite;">Politicas de Privacidad</a> |
-        <a href="" style="color: ghostwhite;">Terminos y condiciones</a> |
-        <a href="" style="color: ghostwhite;">Precaucion y Seguridad</a> |
-        <a href="" style="color: ghostwhite;">Esclavitud Moderna y Trafico de personas</a>
+        <a href="inx_politicas.html" style="color: ghostwhite;">Politicas de Privacidad</a> |
+        <a href="#" style="color: ghostwhite;">Terminos y condiciones</a> |
+        <a href="#" style="color: ghostwhite;">Precaucion y Seguridad</a> |
+        <a href="#" style="color: ghostwhite;">Esclavitud Moderna y Trafico de personas</a>
         <p>© 2021 Braun256 Corporation</p>
     </div>
     <script src="ASSETS/JS/js/bootstrap.bundle.min.js"></script>
