--- a/Proyecto/1_inicio_hotel/inx_inicio_hotel.html
+++ b/Proyecto/1_inicio_hotel/inx_inicio_hotel.html
@@ -36,9 +36,23 @@
         <form action="inx_home_hotel.html" method="POST" autocomplete="off">
           <br/><br/>
           <h2>WELCOME !!</h2>
-          <input type="texto" id="usuario" name="usuario" placeholder="UserName" tabindex="1" size="25" style="border-radius: 14px; height: 30px; background-color: rgba(255, 255, 255);color: rgb(55, 38, 59); font-size: 20px; border-style:hidden; text-align-last: center;"required>
+          <input 
+          type="texto" 
+          id="usuario" 
+          name="usuario" 
+          placeholder="UserName" 
+          tabindex="1" 
+          size="25" 
+          style="border-radius: 14px; height: 30px; background-color: rgba(255, 255, 255);color: rgb(55, 38, 59); font-size: 20px; border-style:hidden; text-align-last: center;"required>
           <br/><br/>
-          <input type="password" id="clave" name="clave" placeholder="Password"  tabindex="2" size="25" style="border-radius: 14px; height: 30px; background-color: rgba(255, 255, 255);color: rgb(55, 39, 59); font-size: 20px; border-style:hidden; text-align-last: center;" required>
+          <input 
+          type="password" 
+          id="clave" 
+          name="clave" 
+          placeholder="Password"  
+          tabindex="2" 
+          size="25" 
+          style="border-radius: 14px; height: 30px; background-color: rgba(255, 255, 255);color: rgb(55, 39, 59); font-size: 20px; border-style:hidden; text-align-last: center;" required>
           <br/><br/>
           <button type="submit">LOGIN</button>
         </form>
