--- a/Proyecto/1_inicio_hotel/inx_home_hotel.html
+++ b/Proyecto/1_inicio_hotel/inx_home_hotel.html
@@ -67,7 +67,7 @@
                                 <li><hr></li>
                                 <li><a href="inx_reservas.html">RESERVAS</a></li>
                                 <li><hr></li>
-                                <li><a href="">REGISTRARME</a></li>
+                                <li><a href="inx_registro.html">REGISTRARME</a></li>
                             </ul>
                         </li>
                 </ul>
