--- a/Proyecto/1_inicio_hotel/inx_servicios.html
+++ b/Proyecto/1_inicio_hotel/inx_servicios.html
@@ -69,7 +69,7 @@
                             <li><hr></li>
                             <li><a href="inx_reservas.html">RESERVAS</a></li>
                             <li><hr></li>
-                            <li><a href="">REGISTRARME</a></li>
+                            <li><a href="inx_registro.html">REGISTRARME</a></li>
                         </ul>
                     </li>
             </ul>
@@ -93,10 +93,9 @@
     </div>
 
     <br/><br/>
-    <br/><br/>
 
 <div>
-    <img src="ASSETS/Imagenes_Hotel/imagenes_home_hotel/hotel2.jpg" alt="" width="100%" style="border-style: groove;">
+    <img src="ASSETS/Imagenes_Hotel/imagenes_home_hotel/hotel2.jpg" alt="" width="100%" style="border-style: groove; height: 520px;">
     
 </div>
 
@@ -192,7 +191,7 @@
 <br/><br/>
 
 <div>
-    <img src="ASSETS/Imagenes_Hotel/imagenes_home_hotel/rest1.jpg" alt="" width="100%" style="border-style: groove;">
+    <img src="ASSETS/Imagenes_Hotel/imagenes_home_hotel/rest1.jpg" alt="" width="100%" style="border-style: groove; height: 520px;">
 </div>
 
 <br/><br/>
