--- a/Proyecto/1_inicio_hotel/inx_home_hotel.html
+++ b/Proyecto/1_inicio_hotel/inx_home_hotel.html
@@ -53,7 +53,7 @@
                                 <li><br/></li>
                                 <li><a href="inx_home_hotel.html">HOTEL</a></li>
                                 <li><hr></li>
-                                <li><a href="">HABITACIONES</a></li>
+                                <li><a href="inx_habitaciones.html">HABITACIONES</a></li>
                                 <li><hr></li>
                                 <li><a href="inx_servicios.html">SERVICIOS</a></li>
                                 <li><hr></li>
