--- a/Proyecto/1_inicio_hotel/inx_servicios.html
+++ b/Proyecto/1_inicio_hotel/inx_servicios.html
@@ -55,7 +55,7 @@
                         <ul style="list-style-type: none; color: blanchedalmond; background-color: rgba(103, 93, 124, 0.788); font-size: 20px;">
                             <li><a href="inx_home_hotel.html">HOTEL</a></li>
                             <li><hr></li>
-                            <li><a href="">HABITACIONES</a></li>
+                            <li><a href="inx_habitaciones.html">HABITACIONES</a></li>
                             <li><hr></li>
                             <li><a href="inx_servicios.html">SERVICIOS</a></li>
                             <li><hr></li>
