--- a/Proyecto/1_inicio_hotel/inx_inicio_hotel.html
+++ b/Proyecto/1_inicio_hotel/inx_inicio_hotel.html
@@ -33,7 +33,7 @@
         <br/>
         <img src="ASSETS/Imagenes_Hotel/br22x.png" alt="" width="30%" height="20%" style="border: 5px solid rgb(87, 58, 94);">
         
-        <form action="inx_home_hotel.html" method="POST" autocomplete="off">
+        <form action="inx_principal.html" method="POST" autocomplete="off">
           <br/><br/>
           <h2>WELCOME !!</h2>
           <input 
