--- a/Proyecto/1_inicio_hotel/inx_principal.html
+++ b/Proyecto/1_inicio_hotel/inx_principal.html
@@ -50,7 +50,7 @@
         <div class="tema">
             <nav id="menu">
                 <ul style="list-style-type: none; color: blanchedalmond; background-color: rgba(103, 93, 124, 0.993); font-size: 26px;">
-                    <li><a href="inx_home_hotel.html">HOTEL</a></li>
+                    <li><a href="inx_home_hotel.html">HOME</a></li>
                     <li>|</li> 
                     <li><a href="inx_habitaciones.html">HABITACIONES</a></li>
                     <li>|</li>
