--- a/Proyecto/1_inicio_hotel/inx_home_hotel.html
+++ b/Proyecto/1_inicio_hotel/inx_home_hotel.html
@@ -51,7 +51,7 @@
                         <li selected="true">HOTEL BRAUN256
                             <ul style="list-style-type: none; color: blanchedalmond; background-color: rgba(103, 93, 124, 0.788); font-size: 20px;">
                                 <li><br/></li>
-                                <li><a href="inx_home_hotel.html">HOTEL</a></li>
+                                <li><a href="inx_home_hotel.html">HOME</a></li>
                                 <li><hr></li>
                                 <li><a href="inx_habitaciones.html">HABITACIONES</a></li>
                                 <li><hr></li>
